--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
-  <title>总能贷</title>
+  <title>document</title>
   <script src="static/flexiable.js"></script>
   <link rel="stylesheet" href="static/reset.css">
 </head>
